캐스터 어플리케이션 - 화면 추가

--- a/Andorid/app/src/main/res/layout/layout_intro_activity.xml
+++ b/Andorid/app/src/main/res/layout/layout_intro_activity.xml
@@ -4,4 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <FrameLayout
+        android:id="@+id/intro_backFrame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/intro_frontFrame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
 </FrameLayout>
