캐스터 앱 화면 - 인트로 화면 1차 작업

--- a/Andorid/app/src/main/res/layout/layout_intro_activity.xml
+++ b/Andorid/app/src/main/res/layout/layout_intro_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,10 +13,45 @@
     </FrameLayout>
 
     <FrameLayout
-        android:id="@+id/intro_frontFrame"
+        android:id="@+id/intro_frontFrame0"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="@dimen/dp100"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp70"
+                android:layout_marginLeft="@dimen/dp30"
+                android:layout_marginRight="@dimen/dp30"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp70"
+                android:layout_marginLeft="@dimen/dp30"
+                android:layout_marginRight="@dimen/dp30"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dp16"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="@dimen/dp15"
+            android:text="이미 캐스터를 사용하고 있다면 ?"/>
+
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/intro_frontFrame1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
