로그인 화면 , 회원가입 화면 2차 작업

--- a/Andorid/app/src/main/res/layout/layout_login.xml
+++ b/Andorid/app/src/main/res/layout/layout_login.xml
@@ -1,8 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_white"
+    android:gravity="bottom"
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:id="@+id/registerFrame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/dp20"
+        android:gravity="center"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <ImageView
+            android:layout_width="@dimen/dp150"
+            android:layout_height="@dimen/dp150"
+            android:layout_marginBottom="@dimen/dp20"
+            android:background="@drawable/main_color_round15_shape" />
+
+        <Button
+            android:id="@+id/registerFrameButton0"
+            android:layout_width="@dimen/dp240"
+            android:layout_height="@dimen/dp45"
+            android:layout_marginTop="@dimen/dp8"
+            android:background="@drawable/google_color_round15_shape"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dp70"
+            android:text="이메일로 가입하기"
+            android:textColor="@color/color_white"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/registerFrameButton1"
+            android:layout_width="@dimen/dp240"
+            android:layout_height="@dimen/dp45"
+            android:layout_marginTop="@dimen/dp8"
+            android:background="@drawable/facebook_color_round15_shape"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dp70"
+            android:text="페이스북으로 시작하기"
+            android:textColor="@color/color_white"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/color_white"
+        android:gravity="bottom"
+        android:orientation="vertical">
+
+        <com.casting.view.InsertForm
+            android:id="@+id/insertForm1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp70"
+            android:layout_marginBottom="@dimen/dp20"
+            android:layout_marginLeft="@dimen/dp30"
+            android:layout_marginRight="@dimen/dp30"
+            android:visibility="gone"
+            app:title="이메일" />
+
+        <com.casting.view.InsertForm
+            android:id="@+id/insertForm2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp70"
+            android:layout_marginBottom="@dimen/dp20"
+            android:layout_marginLeft="@dimen/dp30"
+            android:layout_marginRight="@dimen/dp30"
+            android:visibility="gone"
+            app:title="비밀번호를 입력하세요" />
+
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp50"
+            android:layout_marginBottom="@dimen/dp20"
+            android:layout_marginLeft="@dimen/dp30"
+            android:layout_marginRight="@dimen/dp30"
+            android:background="@drawable/main_color_round10_shape"
+            android:text="로그인"
+            android:textColor="@color/color_white"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/loginAppearButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="@dimen/dp15"
+            android:gravity="center"
+            android:text="이미 캐스터를 사용하고 있다면 ?"
+            android:textColor="@color/mainColor0" />
+
+    </LinearLayout>
+
+</FrameLayout>
