--- a/Andorid/app/src/main/res/layout/layout_insert_form.xml
+++ b/Andorid/app/src/main/res/layout/layout_insert_form.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/dp18"
-        android:textColor="#d0d0d0"
+        android:textColor="@color/mainColor0"
         android:text="title"
         android:gravity="center_vertical"/>
 
