--- a/Andorid/app/src/main/res/values/colors.xml
+++ b/Andorid/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#3FC1C9</color>
+    <color name="colorPrimaryDark">#3FC1C9</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="mainColor0">#3FC1C9</color>
+
 </resources>
