--- a/Andorid/app/src/main/res/layout/layout_register.xml
+++ b/Andorid/app/src/main/res/layout/layout_register.xml
@@ -7,5 +7,69 @@
     android:gravity="bottom"
     android:background="@color/color_white">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/dp15"
+            android:paddingRight="@dimen/dp15">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="회원가입"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/dp50"
+                android:textSize="@dimen/dp20"
+                android:textColor="@color/mainColor0"/>
+
+            <com.casting.view.InsertForm
+                android:id="@+id/registrationForm1"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp60"
+                android:layout_marginTop="@dimen/dp15"
+                app:title="아이디"/>
+
+            <com.casting.view.InsertForm
+                android:id="@+id/registrationForm2"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp60"
+                android:layout_marginTop="@dimen/dp15"
+                app:title="이메일"/>
+
+            <com.casting.view.InsertForm
+                android:id="@+id/registrationForm3"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp60"
+                android:layout_marginTop="@dimen/dp15"
+                app:title="비밀번호를 입력해주세요"/>
+
+            <com.casting.view.InsertForm
+                android:id="@+id/registrationForm4"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp60"
+                android:layout_marginTop="@dimen/dp15"
+                app:title="비밀번호를 다시 한번 입력해주세요"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp50"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="@dimen/dp15"
+        android:layout_marginRight="@dimen/dp15"
+        android:layout_marginBottom="@dimen/dp5"
+        android:textColor="@color/color_white"
+        android:text="로그인"
+        android:textSize="@dimen/dp18"
+        android:background="@drawable/main_color_round15_shape"/>
 
 </FrameLayout>
