--- a/Andorid/app/src/main/res/layout/layout_main_activity.xml
+++ b/Andorid/app/src/main/res/layout/layout_main_activity.xml
@@ -43,7 +43,9 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/main_TabLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp60" />
+            android:layout_height="@dimen/dp60"
+            app:tabMode="fixed"
+            app:tabGravity="fill"/>
 
     </LinearLayout>
 
