--- a/Andorid/app/src/main/res/values/styles.xml
+++ b/Andorid/app/src/main/res/values/styles.xml
@@ -23,4 +23,15 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="CustomTabLayoutStyle" >
+        <item name="tabSelectedTextColor">@color/mainColor0</item>
+        <item name="tabTextAppearance">@style/CustomTabTexStyle</item>
+    </style>
+    <style name="CustomTabTexStyle" >
+        <item name="android:textSize">@dimen/dp15</item>
+        <item name="android:textColor">@color/color_7c7c7c</item>
+        <item name="android:textStyle">normal</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
 </resources>
