--- a/Andorid/app/src/main/res/values/attrs.xml
+++ b/Andorid/app/src/main/res/values/attrs.xml
@@ -9,7 +9,8 @@
         <attr name="insertTextType" format="enum">
             <enum name="email" value="0"/>
             <enum name="password" value="1"/>
-            <enum name="text" value="2"/>
+            <enum name="shortMessage" value="2"/>
+            <enum name="longMessage" value="3"/>
         </attr>
     </declare-styleable>
 
