--- a/Andorid/app/src/main/res/values/colors.xml
+++ b/Andorid/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="mainColor0">#3FC1C9</color>
-
+    <color name="mainColor0_80">#a03FC1C9</color>
 </resources>
