--- a/Andorid/app/src/main/res/layout/view_item_news.xml
+++ b/Andorid/app/src/main/res/layout/view_item_news.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp250"
+    android:layout_height="@dimen/dp130"
     android:layout_marginLeft="@dimen/dp15"
     android:layout_marginRight="@dimen/dp15"
     android:layout_marginTop="@dimen/dp5"
@@ -20,14 +20,28 @@
         android:id="@+id/cardItemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비트코인 가격 그래프"
+        android:text=""
+        android:textSize="@dimen/dp14"
         android:textStyle="bold"
         android:textColor="@color/mainColor0"/>
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/lineChart"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/newsHighlightText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp30"
-        android:layout_height="@dimen/dp250"/>
+        android:textSize="@dimen/dp14"
+        android:maxLines="4"
+        android:textColor="@color/color_666666"
+        android:text=""/>
+
+    <TextView
+        android:id="@+id/newsTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1시간전"
+        android:layout_gravity="right|top"
+        android:textSize="@dimen/dp12"
+        android:textColor="@color/color_adadad"/>
 
 </android.support.v7.widget.CardView>
