--- a/Andorid/app/src/main/res/layout/view_item_timeline.xml
+++ b/Andorid/app/src/main/res/layout/view_item_timeline.xml
@@ -1,57 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="@dimen/dp15"
-    android:paddingLeft="@dimen/dp15">
-
-    <com.casting.commonmodule.view.CircleImageView
-        android:id="@+id/userImage"
-        android:layout_width="@dimen/dp45"
-        android:layout_height="@dimen/dp45"
-        android:background="@color/mainColor0"
-        android:scaleType="centerCrop" />
+    android:layout_height="@dimen/dp180"
+    android:layout_marginBottom="@dimen/dp5"
+    android:layout_marginLeft="@dimen/dp15"
+    android:layout_marginRight="@dimen/dp15"
+    android:layout_marginTop="@dimen/dp5"
+    android:orientation="vertical"
+    card_view:cardCornerRadius="@dimen/dp15"
+    card_view:cardElevation="@dimen/dp5"
+    card_view:cardMaxElevation="0dp"
+    card_view:contentPaddingBottom="@dimen/dp5"
+    card_view:contentPaddingLeft="@dimen/dp15"
+    card_view:contentPaddingRight="@dimen/dp15"
+    card_view:contentPaddingTop="@dimen/dp15">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp10"
-        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp150"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/userNickName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="조감독"
-            android:textColor="@color/color_black"
-            android:textSize="@dimen/dp20"
-            android:textStyle="bold" />
+        <com.casting.commonmodule.view.CircleImageView
+            android:id="@+id/userImage"
+            android:layout_width="@dimen/dp45"
+            android:layout_height="@dimen/dp45"
+            android:background="@color/mainColor0"
+            android:scaleType="centerCrop" />
 
-        <TextView
-            android:id="@+id/userGrade"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp10"
-            android:background="@drawable/shape_main_color_round10"
-            android:paddingBottom="@dimen/dp2"
-            android:paddingLeft="@dimen/dp10"
-            android:paddingRight="@dimen/dp10"
-            android:paddingTop="@dimen/dp2"
-            android:text="골드"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/dp14" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp45"
+                android:layout_marginLeft="@dimen/dp10">
+
+                <TextView
+                    android:id="@+id/userNickName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="@dimen/dp14"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:maxLength="25"
+                    android:textColor="@color/color_black"
+                    android:text="Mr cho"/>
+
+                <TextView
+                    android:id="@+id/userId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="@dimen/dp14"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:maxLength="25"
+                    android:textColor="@color/color_666666"
+                    android:text="Mr cho"/>
+
+                <TextView
+                    android:id="@+id/userTimeLineTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="1시간전"
+                    android:layout_gravity="right|top"
+                    android:gravity="center_vertical"
+                    android:textSize="@dimen/dp12"
+                    android:textColor="@color/color_adadad"/>
+
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/userTimeLine"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp75"
+                android:textColor="@color/color_666666"
+                android:text="timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp25"
+                android:orientation="horizontal"
+                android:gravity="center_vertical|right">
+
+                <Button
+                    android:id="@+id/replyThisTimeLine"
+                    android:layout_width="@dimen/dp25"
+                    android:layout_height="@dimen/dp25"
+                    android:layout_marginRight="@dimen/dp10"/>
+
+                <Button
+                    android:id="@+id/shareTimeLineButton"
+                    android:layout_width="@dimen/dp25"
+                    android:layout_height="@dimen/dp25" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/userIdView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp5"
-        android:text="Mr.cho"
-        android:textColor="@color/color_7c7c7c"
-        android:textSize="@dimen/dp12" />
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
