캐스팅 화면 1depth - 캐스팅 타임라인 리스트 및 뉴스 리스트 적용

--- a/Andorid/app/src/main/res/layout/activity_casting.xml
+++ b/Andorid/app/src/main/res/layout/activity_casting.xml
@@ -27,6 +27,7 @@
         android:layout_marginRight="@dimen/dp15"/>
 
     <Button
+        android:id="@+id/castButton"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp50"
         android:layout_gravity="bottom"
