--- a/Andorid/app/src/main/res/layout/view_item_timeline_reply.xml
+++ b/Andorid/app/src/main/res/layout/view_item_timeline_reply.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp180"
+    android:layout_height="@dimen/dp130"
     android:layout_marginBottom="@dimen/dp5"
     android:layout_marginLeft="@dimen/dp15"
     android:layout_marginRight="@dimen/dp15"
@@ -26,7 +26,8 @@
             android:layout_width="@dimen/dp45"
             android:layout_height="@dimen/dp45"
             android:background="@color/mainColor0"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,8 +36,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp45"
-                android:layout_marginLeft="@dimen/dp10">
+                android:layout_height="@dimen/dp45">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -59,9 +59,9 @@
                         android:id="@+id/userId"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/dp10"
                         android:ellipsize="end"
                         android:gravity="center_vertical"
-                        android:layout_marginLeft="@dimen/dp10"
                         android:maxLength="25"
                         android:maxLines="1"
                         android:text="Mr cho"
@@ -86,29 +86,9 @@
                 android:id="@+id/userTimeLine"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp75"
-                android:layout_marginLeft="@dimen/dp10"
-                android:maxLines="4"
+                android:maxLines="3"
                 android:text="timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline timeline"
                 android:textColor="@color/color_666666" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp25"
-                android:gravity="center_vertical|right"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/replyThisTimeLine"
-                    android:layout_width="@dimen/dp25"
-                    android:layout_height="@dimen/dp25"
-                    android:layout_marginRight="@dimen/dp10" />
-
-                <Button
-                    android:id="@+id/shareTimeLineButton"
-                    android:layout_width="@dimen/dp25"
-                    android:layout_height="@dimen/dp25" />
-
-            </LinearLayout>
 
         </LinearLayout>
 
