--- a/Andorid/CommonModule/src/main/res/values/color.xml
+++ b/Andorid/CommonModule/src/main/res/values/color.xml
@@ -63,6 +63,7 @@
     <color name="color_505050">#505050</color>
     <color name="color_d6d6d6">#d6d6d6</color>
     <color name="color_d9d9d9">#d9d9d9</color>
+    <color name="color_d9d9d9_50">#90d9d9d9</color>
     <color name="color_999999">#999999</color>
     <color name="color_80999999">#80999999</color>
     <color name="color_fd454f">#fd454f</color>
