캐스팅 화면 2depth - 선택형 입력 아이템 수정

--- a/Andorid/app/src/main/res/drawable/shape_main_color_circle_nofill.xml
+++ b/Andorid/app/src/main/res/drawable/shape_main_color_circle_nofill.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="ring"
-    android:innerRadiusRatio="3"
-    android:useLevel="false">
-
-    <solid
-        android:color="@color/mainColor0"/>
-
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Larger blue circle in back -->
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@color/mainColor0"/>
+            <size
+                android:width="15dp"
+                android:height="15dp"/>
+        </shape>
+    </item>
+    <!-- Smaller red circle in front -->
+    <item>
+        <shape android:shape="oval">
+            <!-- transparent stroke = larger_circle_size - smaller_circle_size -->
+            <stroke android:color="@android:color/transparent"
+                android:width="5dp"/>
+            <solid android:color="@color/color_white"/>
+            <size
+                android:width="10dp"
+                android:height="10dp"/>
+        </shape>
+    </item>
+</layer-list>
