--- a/Andorid/app/src/main/res/layout/view_item_trust_graph_point.xml
+++ b/Andorid/app/src/main/res/layout/view_item_trust_graph_point.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:layout_width="@dimen/dp80"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/color_50fff56c">
+    android:background="@color/color_transparent">
 
     <View
         android:layout_marginTop="@dimen/dp5"
@@ -15,10 +15,11 @@
 
     <TextView
         android:id="@+id/circlePointMessage"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/dp12"
         android:gravity="center"
+        android:maxWidth="@dimen/dp80"
         android:layout_marginTop="@dimen/dp10"
         android:textColor="@color/color_505050"
         android:maxLines="3"
