캐스팅 화면 2depth - 선택형 입력 아이템 수정 (2)

--- a/Andorid/app/src/main/res/layout/activity_main.xml
+++ b/Andorid/app/src/main/res/layout/activity_main.xml
@@ -76,4 +76,12 @@
         android:layout_marginLeft="@dimen/dp15"
         android:layout_marginRight="@dimen/dp15" />
 
+    <View
+        android:id="@+id/main_seekBarControllerCover"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp60"
+        android:layout_gravity="bottom"
+        android:visibility="gone"
+        android:background="@color/color_white50"/>
+
 </FrameLayout>
