--- a/Andorid/app/src/main/res/layout/view_item_trust_graph.xml
+++ b/Andorid/app/src/main/res/layout/view_item_trust_graph.xml
@@ -31,4 +31,30 @@
         android:layout_height="@dimen/dp100"
         android:layout_marginTop="@dimen/dp30"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="@dimen/dp5">
+
+        <TextView
+            android:id="@+id/cardItemTrustText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="@dimen/dp30"
+            android:text="2,500"
+            android:textColor="@color/color_black80"/>
+
+        <TextView
+            android:id="@+id/cardItemTrustTextPrefix"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dp12"
+            android:text="%"
+            android:layout_marginLeft="@dimen/dp5"
+            android:textColor="@color/color_black50"/>
+
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
