--- a/Andorid/app/src/main/res/layout/activity_login.xml
+++ b/Andorid/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
         android:gravity="bottom"
         android:orientation="vertical">
 
-        <com.casting.view.InsertForm
+        <com.casting.view.insert.InsertForm
             android:id="@+id/insertForm1"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp70"
@@ -67,7 +67,7 @@
             app:title="이메일"
             app:insertTextType="email"/>
 
-        <com.casting.view.InsertForm
+        <com.casting.view.insert.InsertForm
             android:id="@+id/insertForm2"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp70"
