캐스팅 화면 2depth - 선택형 입력 아이템 수정 (3) (객관식 수평 , 수직 , 스크롤 형식 아이템 적용)

--- a/Andorid/app/src/main/res/layout/view_item_common_card.xml
+++ b/Andorid/app/src/main/res/layout/view_item_common_card.xml
@@ -17,7 +17,7 @@
     card_view:cardMaxElevation="0dp">
 
     <TextView
-        android:id="@+id/cardItemTitle"
+        android:id="@+id/insertItemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
