--- a/Andorid/app/src/main/res/layout/view_item_current_casting_status.xml
+++ b/Andorid/app/src/main/res/layout/view_item_current_casting_status.xml
@@ -17,7 +17,7 @@
     card_view:contentPaddingTop="@dimen/dp15">
 
     <TextView
-        android:id="@+id/cardItemTitle"
+        android:id="@+id/insertItemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="캐스트 현황"
