--- a/Andorid/app/src/main/res/layout/view_item_line_graph.xml
+++ b/Andorid/app/src/main/res/layout/view_item_line_graph.xml
@@ -17,7 +17,7 @@
     card_view:contentPaddingBottom="@dimen/dp5">
 
     <TextView
-        android:id="@+id/cardItemTitle"
+        android:id="@+id/insertItemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비트코인 가격 그래프"
