--- a/Andorid/app/src/main/res/layout/view_item_scrollable_options.xml
+++ b/Andorid/app/src/main/res/layout/view_item_scrollable_options.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp130"
+    android:layout_height="@dimen/dp200"
     android:layout_marginLeft="@dimen/dp15"
     android:layout_marginRight="@dimen/dp15"
     android:layout_marginTop="@dimen/dp5"
@@ -25,23 +25,36 @@
         android:textStyle="bold"
         android:textColor="@color/mainColor0"/>
 
-    <TextView
-        android:id="@+id/newsHighlightText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp30"
-        android:textSize="@dimen/dp14"
-        android:maxLines="4"
-        android:textColor="@color/color_666666"
-        android:text=""/>
+    <com.casting.view.insert.InsertOptionsScrollable
+        android:id="@+id/scrollableOptionsView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp100"
+        android:layout_marginTop="@dimen/dp30"/>
 
-    <TextView
-        android:id="@+id/newsTime"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1시간전"
-        android:layout_gravity="right|top"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/color_adadad"/>
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="@dimen/dp5">
+
+        <TextView
+            android:id="@+id/insertItemText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="@dimen/dp30"
+            android:text=""
+            android:textColor="@color/color_black80"/>
+
+        <TextView
+            android:id="@+id/insertItemTextPrefix"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dp12"
+            android:text="%"
+            android:layout_marginLeft="@dimen/dp5"
+            android:textColor="@color/color_black50"/>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
